* Making and then comitting unrelated changes in the Channel Settings   dialog could cause unintentionally setting the channel's topic to an   older version if someone else had changed the topic since the first   time the dialog was opened or while the dialog was open, due to a bug   in the code that avoids such external topic changes interfering with   concurrent local editing of the topic. This has been fixed. * The contents of the topic edit field in the Channel Settings dialog   will now reflect the selected item in the topic history list until   the user starts editing.

(Ended up abusing QTextEdit::undoAvailable() to get something akin to
QLineEdit::textEdited() for QTextEdit, and QTextEdit::clear() to flush
the undo history at dialog close to kick the selection->textedit sync
back into gear for the next dialog open.)

BUG:213370

svn path=/trunk/extragear/network/konversation/; revision=1045997